database updated to mysql

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,7 +12,7 @@ myPostgresDB = {
 }
 
 mySqlDB = {
-  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+  dataSourceClass = "com.mysql.jdbc.jdbc2.optional.MysqlDataSource"
   properties = {
     databaseName = "mydb"
     user = "root"
@@ -21,3 +21,6 @@ mySqlDB = {
   }
   numThreads = 10                                       //IO Threads(hikaricp)
 }
+
+//com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+//mysql -u root -p
